...
"UserModuleErrorCode.ParaError"       = "参数有误";
"UserModuleErrorCode.LBSNil"          = "LBS不能为空";
"UserModuleErrorCode.PhoneNumListNil" = "电话号码列表不能为空";
"UserModuleErrorCode.ImageParseFail"  = "图片转换失败";

// 首页
"MainPage.SignInBtn"       = "登录";
"MainPage.SignUpBtn"       = "加入豚鼠";

// 登录页面
"SignIn.SignInBtn"         = "登录";
"SignIn.UserNameTextField" = "手机/邮箱";
"SignIn.PasswdTextField"   = "密码";
"SignIn.title"             = "准备开始";
"SignIn.SignUpItemBtn"     = "注册";
"SignIn.ForgotPasswdBtn"   = "忘记了密码？";

// 注册页面
"SignUp.PhoneRightItemBtn"   = "邮箱";
"SignUp.EmailRightItemBtn"   = "手机";
"SignUp.Title"               = "加入豚鼠";
"SignUp.PhoneNumTextField"   = "手机";
"SignUp.EmailTextField"      = "邮箱";
"SignUp.SafetyCodeTextField" = "验证码";
"SignUp.SendSafetyCode"      = "发送验证码";
"SignUp.ProcotolViewTitle"   = "我们已经阅读并接受";
"SignUp.ProcotolViewBtn"     = "《豚鼠科技服务协议》";
"SignUp.SignUpBtn"           = "注册";
"SignUp.ReadProcotol"        = "请先阅读《豚鼠科技服务协议》";
"SignUp.ReSignUp"            = "重新注册";
"SignUp.DirectSinIn"         = "直接登录";

// 引导页
"Guide.MyInfo"                = "我的信息";
"Guide.Mine"                  = "我是";
"Guide.Birthday"              = "生日";
"Guide.Height"                = "身高";
"Guide.Weight"                = "体重";
"Guide.Goal"                  = "目标";
"Guide.GoalStep"              = "计步";
"Guide.GoalSleep"             = "睡眠";
"Guide.Step"                  = "步";
"Guide.Average"               = "平均";
"Guide.Recommend"             = "推荐";
"Guide.Introduce"             = "可以更好的帮助健康统计哦！";
"Guide.Minute"                = "分钟";
"Guide.Hour"                  = "小时";

"Guide.Setting"               = "设置";
"Guide.PassButton"            = "跳过";
"Guide.OpenNotice"            = "开启智能通知";
"Guide.OpenNoticeInfo"        = "随时关注我的健康生活";
"Guide.OpenLocationShare"     = "开启位置共享";
"Guide.OpenLocationShareInfo" = "告诉豚鼠你的位置，更有安全服务！";

"Guide.LinkCavy"              = "连接手环";
"Guide.OpenBluetooth"         = "打开蓝牙";
"Guide.OpenBluetoothInfo"     = "手机蓝牙打开后才能成功连接手环";
"Guide.OpenCavy"              = "绑定手环";
"Guide.OpenCavySugg"          = "没有灯充电试试看";
"Guide.OpenCavyInfo"          = "请按下手环按钮，绑定手环";
"Guide.Linking"               = "正在连接...";
"Guide.PairSuccess"           = "绑定成功";
"Guide.PairSuccessInfo"       = "开始健康之旅吧";
"Guide.PairFail"              = "绑定失败";
"Guide.PairFailInfo"          = "确保手环有电，并且位于手机的连接范围";

"Guide.PhoneRemind.Title"   = "来电提醒";
"Guide.PhoneRemind.Info"    = "来电振动提醒，不漏接一个重要来电";
"Guide.PK.Title"            = "计步成就";
...
"Guide.SafetyService.Title" = "安全服务";
"Guide.SafetyService.Info"  = "遇到紧急情况，连按4下按钮\n立即向联系人发送求救信息";
"Guide.LifeBand.Title"      = "豚鼠手环";
"Guide.LifeBand.Info"       = "开启我的豚鼠生活";

// 忘记密码页面
"Forgot.Title"                = "忘记密码了?";
"Forgot.PasswdTextField"      = "新密码";
"Forgot.BackTextBtn"          = "且慢,我想起来了!";
"Forgot.finish"               = "完成";

// 照相机
"Camera.Photo"                = "拍照";
"Camera.Video"                = "摄影";
"Camera.Back"                 = "取消";

...
