// Generated using SwiftGen, by O.Halligon — https://github.com/AliSoftware/SwiftGen

import UIKit

extension UIImage {
  enum Asset: String {
    case AlarmClockAdd = "AlarmClockAdd"
    case AlarmClockEmotyIcon = "AlarmClockEmotyIcon"
    case AlarmClockNavSave = "AlarmClockNavSave"
    case Backbtn = "backbtn"
    case Banner_1 = "banner_1"
    case Banner_2 = "banner_2"
    case Banner_3 = "banner_3"
    case Banner_home = "banner_home"
    case CameraFlashAuto = "CameraFlashAuto"
    case CameraFlashClosed = "CameraFlashClosed"
    case CameraFlashOpen = "CameraFlashOpen"
    case CameraTakePhoto = "CameraTakePhoto"
    case CameraTurnCamera = "CameraTurnCamera"
    case CameraVideoShot = "CameraVideoShot"
    case CameraVideoStart = "CameraVideoStart"
    case CameraVideoWait = "CameraVideoWait"
    case Chosenbtn = "chosenbtn"
    case ContactBlankPage = "ContactBlankPage"
    case ContactsAccountEditButton = "ContactsAccountEditButton"
    case ContactsAddrssBookNormal = "ContactsAddrssBookNormal"
    case ContactsAddrssBookSelected = "ContactsAddrssBookSelected"
    case ContactsCare = "ContactsCare"
    case ContactsInfoAdd = "ContactsInfoAdd"
    case ContactsInfoAddHighLight = "ContactsInfoAddHighLight"
    case ContactsListCavy = "ContactsListCavy"
    case ContactsListNew = "ContactsListNew"
    case ContactsNearbyNormal = "ContactsNearbyNormal"
    case ContactsNearbySelected = "ContactsNearbySelected"
    case ContactsRecommendNormal = "ContactsRecommendNormal"
    case ContactsRecommendSelected = "ContactsRecommendSelected"
    case DefaultHead_big = "DefaultHead_big"
    case DefaultHead_small = "DefaultHead_small"
    case GuideBluetooth = "GuideBluetooth"
    case GuideFlagH = "GuideFlagH"
    case GuideFlagV = "GuideFlagV"
    case GuideFlashBtn = "GuideFlashBtn"
    case GuideFlashBtnHighLight = "GuideFlashBtnHighLight"
    case GuideGenderBoyChosen = "GuideGenderBoyChosen"
    case GuideGenderBoyGary = "GuideGenderBoyGary"
    case GuideGenderGirlChosen = "GuideGenderGirlChosen"
    case GuideGenderGirlGary = "GuideGenderGirlGary"
    case GuideLocation = "GuideLocation"
    case GuideNotice = "GuideNotice"
    case GuideOpenBand = "GuideOpenBand"
    case GuidePairFail = "GuidePairFail"
    case GuidePairSeccuss = "GuidePairSeccuss"
    case GuideRightBtn = "GuideRightBtn"
    case GuideRightBtnHighLight = "GuideRightBtnHighLight"
    case GuideWeightBg = "GuideWeightBg"
    case GuideWeightNiddle = "GuideWeightNiddle"
    case HomeBandMenu = "HomeBandMenu"
    case HomeDisBandMenu = "HomeDisBandMenu"
    case HomeLeftMenu = "HomeLeftMenu"
    case HomeListHonor = "HomeListHonor"
    case HomeListPK = "HomeListPK"
    case HomeListSleep = "HomeListSleep"
    case HomeListStep = "HomeListStep"
    case HomeNavLeftItem = "HomeNavLeftItem"
    case HomeNavRightItem = "HomeNavRightItem"
    case HomeSleepRing = "HomeSleepRing"
    case HomeStepRing = "HomeStepRing"
    case Medal100000 = "Medal100000"
    case Medal1000000 = "Medal1000000"
    case Medal1000000Lighted = "Medal1000000Lighted"
    case Medal100000Lighted = "Medal100000Lighted"
    case Medal20000 = "Medal20000"
    case Medal20000Lighted = "Medal20000Lighted"
    case Medal5000 = "Medal5000"
    case Medal500000 = "Medal500000"
    case Medal5000000 = "Medal5000000"
    case Medal5000000Lighted = "Medal5000000Lighted"
    case Medal500000Lighted = "Medal500000Lighted"
    case Medal5000Lighted = "Medal5000Lighted"
    case LeftMenuAbout = "LeftMenuAbout"
    case LeftMenuApp = "LeftMenuApp"
    case LeftMenuFriend = "LeftMenuFriend"
    case LeftMenuHelp = "LeftMenuHelp"
    case LeftMenuInformation = "LeftMenuInformation"
    case LeftMenuPK = "LeftMenuPK"
    case LeftMenuTarget = "LeftMenuTarget"
    case RightMenuAlarmClock = "RightMenuAlarmClock"
    case RightMenuAlarmClock_disable = "RightMenuAlarmClock_disable"
    case RightMenuCamera = "RightMenuCamera"
    case RightMenuCamera_disable = "RightMenuCamera_disable"
    case RightMenuDisconnect = "RightMenuDisconnect"
    case RightMenuNotice = "RightMenuNotice"
    case RightMenuNotice_disable = "RightMenuNotice_disable"
    case RightMenuSecurity = "RightMenuSecurity"
    case RightMenuSecurity_disable = "RightMenuSecurity_disable"
    case PersonalInfoEdit = "PersonalInfoEdit"
    case PersonalInfoFemale = "PersonalInfoFemale"
    case PersonalInfoHonorLighted = "PersonalInfoHonorLighted"
    case PersonalInfoHonorNormal = "PersonalInfoHonorNormal"
    case PersonalInfoMale = "PersonalInfoMale"
    case PKAttention = "PKAttention"
    case PKHelp = "PKHelp"
    case PKInvitationAddBtn = "PKInvitationAddBtn"
    case PKInvitationAddBtnHighLight = "PKInvitationAddBtnHighLight"
    case PKInvitationAddBtnOld = "PKInvitationAddBtnOld"
    case PKNextBtnNormal = "PKNextBtnNormal"
    case PKNextBtnNormalHighLight = "PKNextBtnNormalHighLight"
    case PKWinner = "PKWinner"
    case NavShare = "NavShare"
    case ShareMore = "ShareMore"
    case ShareQQ = "ShareQQ"
    case ShareWechat = "ShareWechat"
    case ShareWechatmoments = "ShareWechatmoments"
    case ShareWeibo = "ShareWeibo"
    case Splash = "splash"
    case Unchosenbtn = "unchosenbtn"
    case HomeWeatherCloudy = "HomeWeatherCloudy"
    case HomeWeatherOvercast = "HomeWeatherOvercast"
    case HomeWeatherRain = "HomeWeatherRain"
    case HomeWeatherRainHeavy = "HomeWeatherRainHeavy"
    case HomeWeatherRainLight = "HomeWeatherRainLight"
    case HomeWeatherRainOccasional = "HomeWeatherRainOccasional"
    case HomeWeatherRainThundery = "HomeWeatherRainThundery"
    case HomeWeatherSnow = "HomeWeatherSnow"
    case HomeWeatherSnowHeavy = "HomeWeatherSnowHeavy"
    case HomeWeatherSnowLight = "HomeWeatherSnowLight"
    case HomeWeatherSun = "HomeWeatherSun"

    var image: UIImage {
      return UIImage(asset: self)
    }
  }

  convenience init!(asset: Asset) {
    self.init(named: asset.rawValue)
  }
}

