...
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GoalView" customModule="CavyLifeBand2" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="350" height="538"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="运动步数" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="miX-B0-5x8">
                    <rect key="frame" x="29" y="78" width="92" height="22"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="22" id="6gZ-Zx-mVU"/>
                        <constraint firstAttribute="width" constant="92" id="md0-jU-RFl"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <constraint firstAttribute="width" constant="70" id="aJA-lw-OI3"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wjd-8l-Yj9">
                    <rect key="frame" x="146" y="64" width="140" height="36"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="36" id="2HX-1z-KfR"/>
                        <constraint firstAttribute="width" constant="140" id="cVw-j1-wCH"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
...
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnO-3J-Jeg">
                    <rect key="frame" x="93" y="160" width="1" height="25"/>
                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="1" id="gG2-RX-TYe"/>
                        <constraint firstAttribute="height" constant="25" placeholder="YES" id="rBL-tt-rKz"/>
                    </constraints>
                </view>
...
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="58" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ooq-SA-8YQ">
                    <rect key="frame" x="217" y="269" width="44" height="43"/>
                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ri-aj-NTf">
                    <rect key="frame" x="271" y="291" width="28" height="21"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7G-Si-dG8">
...
