...
        rotaryView!.backgroundImage = UIImage(asset: .GuideWeightBg)
        rotaryView!.setKnobImage(UIImage(asset: .GuideWeightNiddle), forState: .Normal)
        rotaryView!.knobImageCenter = CGPointMake(ez.screenWidth * 0.36, ez.screenWidth * 0.36)
        rotaryView!.addTarget(self, action: #selector(WeightView.rotaryKnobDidChange), forControlEvents: UIControlEvents.ValueChanged)
        
        // 当前值
        valueLabel.text = "60.0"
        valueLabel.textAlignment = .Center
        valueLabel.textColor = UIColor(named: .EColor)
        valueLabel.font = UIFont.mediumSystemFontOfSize(42)
        valueLabel.snp_makeConstraints { make -> Void in
            make.centerX.equalTo(self)
            make.centerY.equalTo(self.rotaryView!.snp_bottom)
        }
        
        // kg 标签
        KGLabel.text = "kg"
        KGLabel.textAlignment = .Center
        KGLabel.textColor = UIColor(named: .EColor)
        KGLabel.font = UIFont.mediumSystemFontOfSize(30)
        KGLabel.snp_makeConstraints { make -> Void in
            make.centerY.equalTo(valueLabel).offset(3)
            make.left.equalTo(valueLabel.snp_right)
...
